[gd_scene load_steps=14 format=2]

[ext_resource path="res://pck/starBackground/starsParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://assts/tres/env/space.tres" type="Environment" id=2]
[ext_resource path="res://assts/fonts/futurepolis/futurepolis-button.tres" type="DynamicFont" id=6]
[ext_resource path="res://scr/mainmenu.gd" type="Script" id=8]
[ext_resource path="res://assts/fonts/futurepolis/Futurepolis3000-maY2.ttf" type="DynamicFontData" id=9]

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../userInterfaceLayer/userInterface/title:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Project E" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../userInterfaceLayer/userInterface/title:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "titleText"
length = 30.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../userInterfaceLayer/userInterface/title:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10, 15, 20, 25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "MANAGE YOUR TIME.", "BLAST THROUGH OBSTACLES.", "Travel through the void.", "Project E", "EXPERIENCE ADRENALINE.", "FREEZE YOUR UNIVERSE." ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../userInterfaceLayer/userInterface/title:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 4, 4.95, 6, 9, 9.95, 11, 14, 14.95, 16, 19, 19.95, 21, 24, 24.95, 26, 29, 30 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("camera:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "montage"
length = 120.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("camera:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 60, 120.2 ),
"transitions": PoolRealArray( 1.5, 1.5, 1.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 4, 4 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 30, 60, 90.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, 0.0, 360.0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="DynamicFont" id=5]
size = 9
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="Gradient" id=6]
interpolation_mode = 1
colors = PoolColorArray( 1, 1, 1, 0.392157, 1, 1, 1, 0 )

[node name="mainmenu" type="Node2D"]
script = ExtResource( 8 )

[node name="env" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="2d" type="Node2D" parent="."]

[node name="camera" type="Camera2D" parent="2d"]
rotating = true
current = true
zoom = Vector2( 0.1, 0.1 )
smoothing_enabled = true

[node name="animation" type="AnimationPlayer" parent="2d"]
autoplay = "titleText"
anims/RESET = SubResource( 10 )
anims/titleText = SubResource( 11 )

[node name="animation2" type="AnimationPlayer" parent="2d"]
autoplay = "montage"
playback_process_mode = 0
anims/RESET = SubResource( 8 )
anims/montage = SubResource( 9 )

[node name="starsParallaxBackground" parent="2d" instance=ExtResource( 1 )]

[node name="userInterfaceLayer" type="CanvasLayer" parent="."]

[node name="userInterface" type="Control" parent="userInterfaceLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="title" type="Label" parent="userInterfaceLayer/userInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.5
margin_top = -17.5
margin_right = 184.5
margin_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 6 )
text = "Project E"
align = 1
percent_visible = 0.0

[node name="play" type="Button" parent="userInterfaceLayer/userInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 239.0
margin_right = 36.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 15 )
text = "PLAY"
flat = true

[node name="dev" type="Label" parent="userInterfaceLayer/userInterface"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -330.0
margin_top = -16.0
margin_right = 330.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 5 )
text = "The game is still in heavy development, expect bugs and glitches while playing. Have fun!"
align = 1

[node name="version" type="Label" parent="userInterfaceLayer/userInterface"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -16.0
margin_right = 28.0
margin_bottom = -6.0
custom_fonts/font = SubResource( 5 )
text = "ALPHA"
align = 1

[node name="separator" type="Control" parent="userInterfaceLayer/userInterface"]
margin_right = 40.0
margin_bottom = 40.0

[node name="separatorLeft" type="Line2D" parent="userInterfaceLayer/userInterface/separator"]
position = Vector2( -24, 16 )
points = PoolVector2Array( 512, 560, 144, 560 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 6 )

[node name="separatorsRight" type="Line2D" parent="userInterfaceLayer/userInterface/separator"]
position = Vector2( 1000, 1136 )
rotation = 3.14159
points = PoolVector2Array( 512, 560, 144, 560 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 6 )

[connection signal="mouse_entered" from="userInterfaceLayer/userInterface/play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="userInterfaceLayer/userInterface/play" to="." method="_on_play_mouse_exited"]
[connection signal="pressed" from="userInterfaceLayer/userInterface/play" to="." method="_on_play_pressed"]
